--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,9 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="text_heading_size">18sp</dimen>
+    <dimen name="text_heading_padding">8dp</dimen>
+
+    <dimen name="margin_default">16dp</dimen>
 </resources>
