--- a/app/src/main/res/layout/activity_choose_server.xml
+++ b/app/src/main/res/layout/activity_choose_server.xml
@@ -42,12 +42,13 @@
         android:id="@+id/sp_http"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_url"
         android:layout_alignBaseline="@+id/et_server"
+        android:layout_below="@id/tv_url"
         android:entries="@array/http_types" />
 
     <EditText
         android:id="@id/et_server"
+        style="@style/EditTextPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_url"
@@ -64,6 +65,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginTop="@dimen/margin_default"
-        android:text="@string/proceed" />
+        android:text="@string/next" />
 
 </RelativeLayout>
