--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -3,50 +3,87 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+
     tools:context=".activities.LogInActivity">
 
-    <Spinner
-        android:id="@+id/sp_team"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <ImageButton
+        android:id="@+id/back"
+        style="@style/ImageButton"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="@color/noResource"
+        android:contentDescription="@string/content_descr_back" />
 
-    <EditText
-        android:id="@+id/et_login"
+    <RelativeLayout
+        android:id="@+id/content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_enter_credentials"
-        android:hint="@string/email"
-        android:maxLines="1"
-        android:text="@string/default_login_text" />
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
 
-    <EditText
-        android:id="@+id/et_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/et_login"
-        android:hint="@string/password"
-        android:inputType="textPassword"
-        android:maxLines="1" />
+        <TextView
+            android:id="@+id/tv_your_team"
+            style="@style/TextHeadingSecondary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/login_screen_content_margin_top"
+            android:text="@string/your_team_capt" />
 
-    <Button
-        android:id="@+id/b_authorize"
-        style="@style/Button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/et_password"
-        android:layout_marginTop="@dimen/margin_default"
-        android:text="@string/authorize" />
+        <Spinner
+            android:id="@+id/sp_team"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_your_team"
+            android:layout_marginTop="4dp" />
 
-    <TextView
-        android:id="@+id/tv_enter_credentials"
-        style="@style/TextWelcomeHeading"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/sp_team"
-        android:gravity="center_horizontal"
-        android:text="@string/please_enter_your_credentials" />
+        <TextView
+            android:id="@+id/tv_email"
+            style="@style/TextHeadingSecondary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/sp_team"
+            android:layout_marginTop="@dimen/margin_default"
+            android:text="@string/email_capt" />
+
+        <EditText
+            android:id="@+id/et_login"
+            style="@style/EditTextPrimary.PushRight"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_email"
+            android:hint="@string/email"
+            android:maxLines="1"
+            android:text="@string/default_login_text" />
+
+        <TextView
+            android:id="@+id/tv_password"
+            style="@style/TextHeadingSecondary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/et_login"
+            android:layout_marginTop="@dimen/margin_default"
+            android:text="@string/password_capt" />
+
+        <EditText
+            android:hint="@string/enter_your_password"
+            android:id="@+id/et_password"
+            style="@style/EditTextPrimary.PushRight"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_password"
+            android:inputType="textPassword"
+            android:maxLines="1" />
+
+        <Button
+            android:id="@+id/b_authorize"
+            style="@style/Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="@dimen/margin_default"
+            android:text="@string/sign_in" />
+
+    </RelativeLayout>
 </RelativeLayout>
