--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,9 +8,15 @@
     <dimen name="text_primary_button">18sp</dimen>
 
     <dimen name="edit_text_bottom_padding">20dp</dimen>
+    <dimen name="edit_text_push_right">4dp</dimen>
 
     <dimen name="margin_default">16dp</dimen>
 
     <dimen name="welcome_screen_headers_margin_top">72dp</dimen>
     <dimen name="welcome_screen_headers_margin_bottom">48dp</dimen>
+
+    <dimen name="login_screen_content_margin_top">80dp</dimen>
+
+    <dimen name="image_button_dimen">48dp</dimen>
+    <dimen name="image_button_padding">12dp</dimen>
 </resources>
