--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,8 @@
 
     <dimen name="image_button_dimen">48dp</dimen>
     <dimen name="image_button_padding">12dp</dimen>
+
+    <dimen name="spinner_text_size">18sp</dimen>
+    <dimen name="spinner_min_height">32sp</dimen>
+    <dimen name="spinner_teams_dropdown_min_height">56dp</dimen>
 </resources>
