Import SafeButton to prevent multiclicks

--- a/app/src/main/res/layout/activity_choose_server.xml
+++ b/app/src/main/res/layout/activity_choose_server.xml
@@ -58,7 +58,7 @@
         android:maxLines="1"
         android:text="@string/default_server_text" />
 
-    <Button
+    <com.applikey.mattermost.views.SafeButton
         android:id="@+id/b_proceed"
         style="@style/Button"
         android:layout_width="match_parent"
