--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
     </style>
 
     <style name="Button" parent="Widget.AppCompat.Button.Borderless.Colored">
+        <item name="android:clickable">true</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:foreground">?android:attr/selectableItemBackground</item>
         <item name="android:background">@drawable/round_button_gradient</item>
@@ -42,6 +43,7 @@
         <item name="android:layout_height">@dimen/image_button_dimen</item>
         <item name="android:padding">@dimen/image_button_padding</item>
         <item name="android:foreground">?selectableItemBackground</item>
+        <item name="android:background">?selectableItemBackground</item>
     </style>
 
 </resources>
