--- a/app/src/main/res/layout/activity_restore_password.xml
+++ b/app/src/main/res/layout/activity_restore_password.xml
@@ -1,13 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_restore_password"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.applikey.mattermost.activities.RestorePasswordActivity">
 
+    tools:context=".activities.RestorePasswordActivity">
+
+    <ImageButton
+        android:id="@+id/back"
+        style="@style/ImageButton"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:contentDescription="@string/content_descr_back"
+        android:src="@drawable/ic_back_shevron" />
+
+    <RelativeLayout
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
+
+        <TextView
+            android:id="@+id/tv_email"
+            style="@style/TextHeadingSecondary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/login_screen_content_margin_top"
+            android:text="@string/email_capt" />
+
+        <EditText
+            android:id="@+id/et_login"
+            style="@style/EditTextPrimary.PushRight"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tv_email"
+            android:hint="@string/email"
+            android:maxLines="1"
+            android:text="@string/default_login_text" />
+
+        <com.applikey.mattermost.views.SafeButton
+            android:id="@+id/b_restore_password"
+            style="@style/Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="@dimen/margin_default"
+            android:text="@string/restore_password_capt" />
+
+    </RelativeLayout>
 </RelativeLayout>
