--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,11 +1,12 @@
 <resources>
-    <dimen name="activity_horizontal_margin">32dp</dimen>
-    <dimen name="activity_vertical_margin">32dp</dimen>
+    <dimen name="activity_horizontal_margin">40dp</dimen>
+    <dimen name="activity_vertical_margin">40dp</dimen>
 
-    <dimen name="text_heading_size">16sp</dimen>
-    <dimen name="text_welcome_heading_size">26sp</dimen>
+    <dimen name="text_heading_size">14sp</dimen>
+    <dimen name="text_heading_small_size">12sp</dimen>
+    <dimen name="text_welcome_heading_size">24sp</dimen>
     <dimen name="text_heading_padding">8dp</dimen>
-    <dimen name="text_primary_button">18sp</dimen>
+    <dimen name="text_primary_button">16sp</dimen>
 
     <dimen name="edit_text_bottom_padding">20dp</dimen>
     <dimen name="edit_text_push_right">4dp</dimen>
@@ -15,7 +16,7 @@
     <dimen name="welcome_screen_headers_margin_top">72dp</dimen>
     <dimen name="welcome_screen_headers_margin_bottom">48dp</dimen>
 
-    <dimen name="login_screen_content_margin_top">80dp</dimen>
+    <dimen name="login_screen_content_margin_top">180dp</dimen>
 
     <dimen name="teams_screen_headers_margin_bottom">72dp</dimen>
 
