--- a/app/src/main/res/layout/list_item_team.xml
+++ b/app/src/main/res/layout/list_item_team.xml
@@ -14,6 +14,8 @@
         android:layout_height="wrap_content"
         android:drawableEnd="@drawable/ic_forward_shevron"
         android:drawablePadding="@dimen/image_button_padding"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:maxLines="1"
         android:textSize="@dimen/spinner_text_size" />
 
@@ -21,6 +23,5 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginStart="@dimen/edit_text_push_right"
-        android:layout_marginTop="8dp"
         android:background="@color/separator_light" />
 </LinearLayout>
