Show tabs, display private channels and public groups in a single tab.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,9 @@
     <color name="textPrimary">@android:color/black</color>
     <color name="textSecondary">@android:color/darker_gray</color>
 
+    <color name="textListPrimary">#242933</color>
+    <color name="textListSecondary">#919499</color>
+
     <color name="noResource">#FF00CC</color>
 
     <color name="separator">#757575</color>
