Remove tab indicator and split groups and channels

--- a/app/src/main/res/layout/activity_chat_list.xml
+++ b/app/src/main/res/layout/activity_chat_list.xml
@@ -19,6 +19,7 @@
         style="@style/ChatListTabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:tabIndicatorHeight="0px"
         app:tabMode="fixed" />
 
     <android.support.v4.view.ViewPager
